Fix video position on hero section
the video on hero section was slightly pushed to the left due to the
big space on the right dive on hero section, so i fixed it by
making that div flex and adding justify-content: center.

--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,8 @@ nav ul a {
 }
 .bottom-hero-right {
   width: 45%;
+  display: flex;
+  justify-content: center;
 }
 .info {
   padding: 5em 0;
